--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Boostrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/styles.css ">
+    <link rel="stylesheet" href="./styles/styles.css">
 
 </head>
 <body class="bc-body vh-100">
@@ -70,10 +70,8 @@
       </section>
       <footer class="m-3 footer_formularios_fijo" >
         <span class="text-secondary bg-transparent  justify-content-left align-items-center p-2 m-1">Copywrite 2022 - </span>
-        <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
-        <a href="https://www.facebook.com" target="_blank"><img class="max-red" src="./images/fb.png" alt="fb"></a>
-        <a href="https://www.instagram.com" target="_blank" ><img class="max-red" src="./images/itg.png"></a>
-        <a href="#" target="_blank"><img class="max-red" src="./images/wp.png" alt="wp"></a>
+        <a href="https://www.instagram.com/fer.rovarella.arte" target="_blank" ><img class="max-red" src="./images/iconos/itg.png"></a>
+        <a href="#" target="_blank"><img class="max-red" src="./images/iconos/wp.png" alt="wp"></a>
     </footer>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
