--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bc-body vh-100">
     <nav class="navbar navbar-expand-lg nav-bg-color navbar-dark ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" src="./images/logo1.png" alt="logo"></a>
+          <!-- <a class="navbar-brand" href="#"><img class="logo" src="./images/logo1.png" alt="logo"></a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -32,20 +32,20 @@
       </nav>
       <h2 class="text-white bg-transparent bg-gradient d-flex justify-content-center align-items-center p-2">Bienvenidos</h2>
       <h3 class="text-secondary bg-transparent  d-flex justify-content-center align-items-center mt-2 mb-1">Recorre el sitio y contactanos por cualquier duda</h3>
-        <section class="container bg-secondary p-3">
+        <section class="container  bg-transparent p-3">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./images/inicio/img1.jpeg" class="d-block w-100" alt="...">
+                    <img src="./images/inicio/img1.jpeg" class="d-block w-50" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./images/inicio/img2.jpeg" class="d-block w-100" alt="...">
+                    <img src="./images/inicio/img2.jpeg" class="d-block w-50" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./images/inicio/img1.jpeg" class="d-block w-100" alt="...">
+                    <img src="./images/inicio/img1.jpeg" class="d-block w-50" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./images/inicio/img2.jpeg" class="d-block w-100" alt="...">
+                    <img src="./images/inicio/img2.jpeg" class="d-block w-50" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
