agregue ninos.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </button>
               </div> 
 <!-- an1macion fondo burbujas -->
-              <div class="burbujas">
+              <!-- <div class="burbujas">
                 <div class="burbuja"></div>
                 <div class="burbuja"></div>
                 <div class="burbuja"></div>
@@ -66,11 +66,12 @@
                 <div class="burbuja"></div>
                 <div class="burbuja"></div>
                 <div class="burbuja"></div>
-              </div>         
+              </div>          -->
       </section>
       <footer class="m-3 footer_formularios_fijo" >
         <span class="text-secondary bg-transparent  justify-content-left align-items-center p-2 m-1">Copywrite 2022 - </span>
-        <a href="https://www.instagram.com/fer.rovarella.arte" target="_blank" ><img class="max-red" src="./images/iconos/itg.png"></a>
+        <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
+        <a href="https://www.instagram.com/fer.rovarella.arte/" target="_blank" ><img class="max-red" src="./images/iconos/itg.png"></a>
         <a href="#" target="_blank"><img class="max-red" src="./images/iconos/wp.png" alt="wp"></a>
     </footer>
       </footer>
