--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -18,8 +18,8 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
-                <a class="nav-link" href="./ninos.html">Escuela de Niños</a>
+                <a class="nav-link" href="../index.html">INICIO</a>
+                <a class="nav-link active" aria-current="page" href="./ninos.html">Escuela de Niños</a>
                 <a class="nav-link" href="./adultos.html">Escuela de Adultos</a>
                 <a class="nav-link" href="./marqueria.html">Marqueria/Restauracion</a>
                 <a class="nav-link" href="./espejos.html">Espejos Oxidados</a>
@@ -30,79 +30,86 @@
           </div>
         </div>
       </nav>
-      <!-- <section class="container">
+       <section class="container">
+        <h4>Las clases de arte son de 2 horas semanales 1 vez por semana. </h4>
         <div class="row">
-          <article class="col-md-6 mt-5" data-aos="flip-left"
+          <article class="col-md-6 mt-3" data-aos="flip-left"
             data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <h3>Completa tus datos</h3>
-            <form class="row g-3">
-              <div class="col-12">
-                <label for="inputAddress" class="form-label text-white">Nombre y Apellido</label>
-                <input type="text" required class="form-control" id="inputAddress" placeholder="Ingrese su nombre y apellido...">
-              </div>
-              <div class="col-12">
-                <label for="inputAddress2" class="form-label text-white">Direccion</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Ingrese su direccion...">
-              </div>
-              <div class="col-md-6">
-                <label for="inputCity" class="form-label text-white">Cuidad</label>
-                <input type="text" class="form-control" id="inputCity">
-              </div>
-              <div class="col-md-4">
-                <label for="inputState" class="form-label text-white">Provincia</label>
-                <select id="inputState" class="form-select">
-                  <option selected>Seleccione...</option>
-                  <option>...</option>
-                </select>
-              </div>
-              <div class="col-md-2">
-                <label for="inputZip" class="form-label text-white">C.Postal</label>
-                <input type="text" class="form-control" id="inputZip">
-              </div>
-              <div class="col-md-6">
-                <label for="inputEmail4" class="form-label text-white">Email</label>
-                <input type="email" required class="form-control" id="inputEmail4" placeholder="xx@xxxx.com">
-              </div>
-              <div class="btn-secondary mt-5">
-                <button type="submit" class="btn ms-5">Enviar</button>
-                <button type="reset" class="btn ms-5">Cancelar</button>
-              </div>
-           </form>
+            <h6>Que Vemos:</h6>
+            <ul>
+              <li>Dibujo</li>
+              <li>Pintura</li>
+              <li>Manualidades</li>
+              <li>Collage</li>
+              <li>Arte textil</li>
+            </ul>
+          <h6>En el taller se trabajaran distintos materiales como:</h6> 
+          <ul>
+            <li>Arcilla</li>
+            <li>Colores</li>
+            <li>Marcadores</li>
+            <li>Porcelana fria</li>
+          </ul>
+          <h6>El alumno debe  traer:</h6>
+          <ul>
+            <li>6 acrilicos fluor. </li>
+            <li>1 block para pintar en acrilico (blanco) </li>
+            <li>1 block con hojas de colores. </li>
+            <li>*2 pinceles uno con punta y otro recto.</li>
+          </ul>
           </article>
-          <article class="col-md-6 mt-5 " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <h3>Contactanos</h3>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Telefono
+          <article class="col-md-6 mt-3 " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+            <h6>La primer clase es de Prueba o Admisión</h6>
+            <span>En el taller se ven los siguientes aspectos:comportamiento, concentración y lectura del dibujo realizado por el estudiante en clase.</span>
+            <span>Llevar ropa cómoda que se pueda manchar ( no nos hacemos responsables por uniformes o ropa nueva que se ensucie con pintura).</span>
+            <span>Horarios: de martes a viernes de 17 a 19 hrs.</span> 
+            <section class="container  bg-secondary p-3">
+              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="../images/ninos/img1.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img2.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img3.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img4.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img5.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img6.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img7.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img8.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img9.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img10.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/ninos/img11.jpeg" class="d-block w-50" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                   </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">(+54) 11-12345678 - <code> Whatsapp:</code>(+54) 911-12345678</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Direccion
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                   </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Pasaje Bellini 12345 - CABA <code></div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Correo Electronico
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">info@arte.com<code></code></div>
-                </div>
-              </div>
-            </div>
+                </div> 
+        </section>
           </article>
          <div>
         </div>
@@ -110,10 +117,9 @@
       <footer class="m-4">
         <span class="text-secondary bg-transparent  justify-content-left align-items-center p-2 m-1">Copywrite 2022 - </span>
         <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
-        <a href="https://www.facebook.com" target="_blank"><img class="max-red" src="../images/fb.png" alt="fb"></a>
-        <a href="https://www.instagram.com" target="_blank" ><img class="max-red" src="../images/itg.png"></a>
-        <a href="#" target="_blank"><img class="max-red" src="../images/wp.png" alt="wp"></a>
-    </footer> -->
+        <a href="https://www.instagram.com/fer.rovarella.arte" target="_blank" ><img class="max-red" src="../images/iconos/itg.png"></a>
+        <a href="#" target="_blank"><img class="max-red" src="../images/iconos/wp.png" alt="wp"></a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
