--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,74 +12,42 @@
 <body class="bc-body">
     <nav class="navbar navbar-expand-lg nav-bg-color navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" src="../images/logo1.png" alt="logo"></a>
+          <!-- <a class="navbar-brand" href="#"><img class="logo" src="../images/logo1.png" alt="logo"></a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                <a class="nav-link" href="../index.html">INICIO</a>
                 <a class="nav-link" href="./ninos.html">Escuela de Niños</a>
                 <a class="nav-link" href="./adultos.html">Escuela de Adultos</a>
                 <a class="nav-link" href="./marqueria.html">Marqueria/Restauracion</a>
                 <a class="nav-link" href="./espejos.html">Espejos Oxidados</a>
                 <a class="nav-link" href="./mes.html">Curso del Mes</a>
                 <a class="nav-link" href="./salidas.html">Salidas Tematicas</a>
-                <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                <a class="nav-link active" aria-current="page" href="./contacto.html">CONTACTO</a>
             </div>
           </div>
         </div>
       </nav>
-      <!-- <section class="container">
+      <section class="container">
         <div class="row">
           <article class="col-md-6 mt-5" data-aos="flip-left"
             data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <h3>Completa tus datos</h3>
-            <form class="row g-3">
-              <div class="col-12">
-                <label for="inputAddress" class="form-label text-white">Nombre y Apellido</label>
-                <input type="text" required class="form-control" id="inputAddress" placeholder="Ingrese su nombre y apellido...">
-              </div>
-              <div class="col-12">
-                <label for="inputAddress2" class="form-label text-white">Direccion</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Ingrese su direccion...">
-              </div>
-              <div class="col-md-6">
-                <label for="inputCity" class="form-label text-white">Cuidad</label>
-                <input type="text" class="form-control" id="inputCity">
-              </div>
-              <div class="col-md-4">
-                <label for="inputState" class="form-label text-white">Provincia</label>
-                <select id="inputState" class="form-select">
-                  <option selected>Seleccione...</option>
-                  <option>...</option>
-                </select>
-              </div>
-              <div class="col-md-2">
-                <label for="inputZip" class="form-label text-white">C.Postal</label>
-                <input type="text" class="form-control" id="inputZip">
-              </div>
-              <div class="col-md-6">
-                <label for="inputEmail4" class="form-label text-white">Email</label>
-                <input type="email" required class="form-control" id="inputEmail4" placeholder="xx@xxxx.com">
-              </div>
-              <div class="btn-secondary mt-5">
-                <button type="submit" class="btn ms-5">Enviar</button>
-                <button type="reset" class="btn ms-5">Cancelar</button>
-              </div>
-           </form>
-          </article>
+            <h3>Donde Nos encontras</h3>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.439239009028!2d-58.436491800000006!3d-34.5677509!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5b930f33c73%3A0xa008c647aec3df7f!2sArce%20882%2C%20C1426BSN%20CABA!5e0!3m2!1ses!2sar!4v1670702470042!5m2!1ses!2sar" width="90%" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </article> 
           <article class="col-md-6 mt-5 " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
             <h3>Contactanos</h3>
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Telefono
+                    Whatsapp
                   </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">(+54) 11-12345678 - <code> Whatsapp:</code>(+54) 911-12345678</div>
+                  <div class="accordion-body">(+54) 9 11-50625547 </div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -89,7 +57,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Pasaje Bellini 12345 - CABA <code></div>
+                  <div class="accordion-body">ARCE 882 piso 1 (esquina Maure), Las Cañitas - CABA <code></div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -99,7 +67,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">info@arte.com<code></code></div>
+                  <div class="accordion-body">fernandarovarella@hotmail.com<code></code></div>
                 </div>
               </div>
             </div>
@@ -110,10 +78,9 @@
       <footer class="m-4">
         <span class="text-secondary bg-transparent  justify-content-left align-items-center p-2 m-1">Copywrite 2022 - </span>
         <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
-        <a href="https://www.facebook.com" target="_blank"><img class="max-red" src="../images/fb.png" alt="fb"></a>
-        <a href="https://www.instagram.com" target="_blank" ><img class="max-red" src="../images/itg.png"></a>
-        <a href="#" target="_blank"><img class="max-red" src="../images/wp.png" alt="wp"></a>
-    </footer> -->
+        <a href="https://www.instagram.com/fer.rovarella.arte" target="_blank" ><img class="max-red" src="../images/iconos/itg.png"></a>
+        <a href="#" target="_blank"><img class="max-red" src="../images/iconos/wp.png" alt="wp"></a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
