--- a/pages/espejos.html
+++ b/pages/espejos.html
@@ -18,11 +18,11 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
+                <a class="nav-link" href="../index.html">INICIO</a>
                 <a class="nav-link" href="./ninos.html">Escuela de Niños</a>
                 <a class="nav-link" href="./adultos.html">Escuela de Adultos</a>
                 <a class="nav-link" href="./marqueria.html">Marqueria/Restauracion</a>
-                <a class="nav-link" href="./espejos.html">Espejos Oxidados</a>
+                <a class="nav-link active" aria-current="page" href="./espejos.html">Espejos Oxidados</a>
                 <a class="nav-link" href="./mes.html">Curso del Mes</a>
                 <a class="nav-link" href="./salidas.html">Salidas Tematicas</a>
                 <a class="nav-link" href="./contacto.html">CONTACTO</a>
@@ -106,14 +106,13 @@
           </article>
          <div>
         </div>
-      </section>
+      </section>-->
       <footer class="m-4">
         <span class="text-secondary bg-transparent  justify-content-left align-items-center p-2 m-1">Copywrite 2022 - </span>
         <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
-        <a href="https://www.facebook.com" target="_blank"><img class="max-red" src="../images/fb.png" alt="fb"></a>
-        <a href="https://www.instagram.com" target="_blank" ><img class="max-red" src="../images/itg.png"></a>
-        <a href="#" target="_blank"><img class="max-red" src="../images/wp.png" alt="wp"></a>
-    </footer> -->
+        <a href="https://www.instagram.com/fer.rovarella.arte" target="_blank" ><img class="max-red" src="../images/iconos/itg.png"></a>
+        <a href="#" target="_blank"><img class="max-red" src="../images/iconos/wp.png" alt="wp"></a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
