--- a/index.html
+++ b/index.html
@@ -30,22 +30,25 @@
           </div>
         </div>
       </nav>
-      <h2 class="text-white bg-transparent bg-gradient d-flex justify-content-center align-items-center p-2">Bienvenidos</h2>
-      <h3 class="text-secondary bg-transparent  d-flex justify-content-center align-items-center mt-2 mb-1">Recorre el sitio y contactanos por cualquier duda</h3>
-        <section class="container  bg-transparent p-3">
+      <section class="container vh-100" data-aos="zoom-in-up" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+        <div class="row">
+            <div class="col-md-12 d-flex flex-column justify-content-center text-white">
+                <h1>FERNANDA ROVARELLA</h1>
+                <p>Artista Plástica.
+                  Desde muy chica tuve mi vocación artística muy fuerte comencé mis estudios en la escuela nacional de Ceramica donde cursé el ciclo  completo y me recibí de Profesora nacional de ahí pase a la escuela nacional de bellas artes Prilidiano Pueyrredón para terminar mis estudios en la escuela Superior de bellas artes Ernesto de la Càrcova.
+                  Me fui especializando en distintas áreas de las artes aplicadas y mientras estudiaba comencé a dar clases en el partido de tigre dónde nací Y me crié, ahí me di cuenta de la conexión maravillosa que puedo tener con mis alumnos y nunca mas pare de enseñar!!!! .
+                  En el transcurso de estos años he participado de cantidad de exposiciones,concursos, eventos artísticos etc. y hoy tengo en el barrio de las cañitas capital mi escuela de artes plásticas y decoración para niños y adultos donde pueden venir a visitarme y conocer mi espacio de arte…..</p>
+            </div>
+        </div>
+        <div class="d-flex flex-column justify-content-center text-white mb-3">
+          <section class="container  bg-transparent p-3">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./images/inicio/img1.jpeg" class="d-block w-50" alt="...">
+                    <img src="./images/inicio/img1.jpeg" class="d-block ancho" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./images/inicio/img2.jpeg" class="d-block w-50" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./images/inicio/img1.jpeg" class="d-block w-50" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="./images/inicio/img2.jpeg" class="d-block w-50" alt="...">
+                    <img src="./images/inicio/img2.jpeg" class="d-block ancho" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -57,24 +60,15 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div> 
-<!-- an1macion fondo burbujas -->
-              <!-- <div class="burbujas">
-                <div class="burbuja"></div>
-                <div class="burbuja"></div>
-                <div class="burbuja"></div>
-                <div class="burbuja"></div>
-                <div class="burbuja"></div>
-                <div class="burbuja"></div>
-                <div class="burbuja"></div>
-              </div>          -->
+          </section>  
+        </div>
       </section>
-      <footer class="m-3 footer_formularios_fijo" >
+      <footer class="m-0 footer_formularios_fijo" >
         <span class="text-secondary bg-transparent  justify-content-left align-items-center p-2 m-1">Copywrite 2022 - </span>
         <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
         <a href="https://www.instagram.com/fer.rovarella.arte/" target="_blank" ><img class="max-red" src="./images/iconos/itg.png"></a>
         <a href="#" target="_blank"><img class="max-red" src="./images/iconos/wp.png" alt="wp"></a>
     </footer>
-      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
