--- a/pages/ninos.html
+++ b/pages/ninos.html
@@ -31,7 +31,7 @@
         </div>
       </nav>
        <section class="container">
-        <h4>Las clases de arte son de 2 horas semanales 1 vez por semana. </h4>
+        <h4>Las clases de Arte son de 2 horas semanales 1 vez por semana. </h4>
         <div class="row">
           <article class="col-md-6 mt-3" data-aos="flip-left"
             data-aos-easing="ease-out-cubic" data-aos-duration="2000">
@@ -43,61 +43,94 @@
               <li>Collage</li>
               <li>Arte textil</li>
             </ul>
-          <h6>En el taller se trabajaran distintos materiales como:</h6> 
-          <ul>
-            <li>Arcilla</li>
-            <li>Colores</li>
-            <li>Marcadores</li>
-            <li>Porcelana fria</li>
-          </ul>
-          <h6>El alumno debe  traer:</h6>
-          <ul>
-            <li>6 acrilicos fluor. </li>
-            <li>1 block para pintar en acrilico (blanco) </li>
-            <li>1 block con hojas de colores. </li>
-            <li>*2 pinceles uno con punta y otro recto.</li>
-          </ul>
+            <h6>En el taller se trabajaran distintos materiales como:</h6> 
+            <ul>
+              <li>Arcilla</li>
+              <li>Colores</li>
+              <li>Marcadores</li>
+              <li>Porcelana fria</li>
+            </ul>
+            <h6>El alumno debe  traer:</h6>
+            <ul>
+              <li>6 acrilicos fluor. </li>
+              <li>1 block para pintar en acrilico (blanco) </li>
+              <li>1 block con hojas de colores. </li>
+              <li>*2 pinceles uno con punta y otro recto.</li>
+            </ul>
+            <h6>En el taller se ven los siguientes aspectos:</h6>
+            <span>Comportamiento, Concentración y Lectura del dibujo realizado por el estudiante en clase.</span>
+            <h6>Horarios:</h6>
+            <span>De martes a Viernes de 17 a 19 hrs.</span> 
+            <h6>* Llevar ropa cómoda que se pueda manchar ( no nos hacemos responsables por uniformes o ropa nueva que se ensucie con pintura).</h6>
+
+            <h6>* La primer clase es de Prueba o Admisión</h6>
           </article>
           <article class="col-md-6 mt-3 " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <h6>La primer clase es de Prueba o Admisión</h6>
-            <span>En el taller se ven los siguientes aspectos:comportamiento, concentración y lectura del dibujo realizado por el estudiante en clase.</span>
-            <span>Llevar ropa cómoda que se pueda manchar ( no nos hacemos responsables por uniformes o ropa nueva que se ensucie con pintura).</span>
-            <span>Horarios: de martes a viernes de 17 a 19 hrs.</span> 
             <section class="container  bg-secondary p-3">
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="../images/ninos/img1.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img1.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img2.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img2.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img3.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img3.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img4.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img4.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img5.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img5.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img6.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img6.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img7.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img7.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img8.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img8.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img9.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img9.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                      <img src="../images/ninos/img10.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img10.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item"> 
-                      <img src="../images/ninos/img11.jpeg" class="d-block w-50" alt="...">
+                      <img src="../images/ninos/img11.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img12.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img13.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img14.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img15.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img16.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img17.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/ninos/img18.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img19.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/ninos/img20.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/ninos/img21.jpeg" class="d-block w-100" alt="...">
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
