agregue salidas.html

--- a/pages/mes.html
+++ b/pages/mes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso del Mes</title>
+    <title>Salidas Tematicas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
@@ -12,13 +12,13 @@
 <body class="bc-body">
     <nav class="navbar navbar-expand-lg nav-bg-color navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" src="../images/logo1.png" alt="logo"></a>
+          <!-- <a class="navbar-brand" href="#"><img class="logo" src="../images/logo1.png" alt="logo"></a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link"href="../index.html">INICIO</a>
+                <a class="nav-link" href="../index.html">INICIO</a>
                 <a class="nav-link" href="./ninos.html">Escuela de Niños</a>
                 <a class="nav-link" href="./adultos.html">Escuela de Adultos</a>
                 <a class="nav-link" href="./marqueria.html">Marqueria/Restauracion</a>
@@ -112,7 +112,7 @@
         <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
         <a href="https://www.instagram.com/fer.rovarella.arte" target="_blank" ><img class="max-red" src="../images/iconos/itg.png"></a>
         <a href="#" target="_blank"><img class="max-red" src="../images/iconos/wp.png" alt="wp"></a>
-    </footer>
+    </footer> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
