--- a/pages/salidas.html
+++ b/pages/salidas.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salidas Tematicas</title>
+    <title>Viaje Tematico</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous"> 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../styles/styles.css">
@@ -12,7 +11,6 @@
 <body class="bc-body">
     <nav class="navbar navbar-expand-lg nav-bg-color navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" src="../images/logo1.png" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,95 +22,137 @@
                 <a class="nav-link" href="./marqueria.html">Marqueria/Restauracion</a>
                 <a class="nav-link" href="./espejos.html">Espejos Oxidados</a>
                 <a class="nav-link" href="./mes.html">Curso del Mes</a>
-                <a class="nav-link active" aria-current="page"  href="./salidas.html">Salidas Tematicas</a>
+                <a class="nav-link active" aria-current="page" href="./salidas.html">Salidas Tematicas</a>
                 <a class="nav-link" href="./contacto.html">CONTACTO</a>
             </div>
           </div>
         </div>
       </nav>
-      <!-- <section class="container">
+      <section class="container">
+        <h4>Viaje temático de arte</h4>
+        <h6>En Octubre</h6>
+        <p> <strong>New York Art </strong> una visión desde el arte y la decoración de este lugar.</p>
+        <p>Son sólo <strong>10 lugares</strong> viviendo en un departamento en grupo, super cómodas y muy bien ubicadas</p> 
+        <p>Cada día una aventura con actividades en Arte y Decoración....</p>
+        <p>Visitamos y recorremos esta ciudad  con guía mía permanente, explicando todas las técnicas y desarrollos pictóricos,  en museos, barrios de artistas, galerías de arte, casas de diseño  .... </p>
         <div class="row">
-          <article class="col-md-6 mt-5" data-aos="flip-left"
+          <article class="col-md-6 mt-3" data-aos="flip-left"
             data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <h3>Completa tus datos</h3>
-            <form class="row g-3">
-              <div class="col-12">
-                <label for="inputAddress" class="form-label text-white">Nombre y Apellido</label>
-                <input type="text" required class="form-control" id="inputAddress" placeholder="Ingrese su nombre y apellido...">
-              </div>
-              <div class="col-12">
-                <label for="inputAddress2" class="form-label text-white">Direccion</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Ingrese su direccion...">
-              </div>
-              <div class="col-md-6">
-                <label for="inputCity" class="form-label text-white">Cuidad</label>
-                <input type="text" class="form-control" id="inputCity">
-              </div>
-              <div class="col-md-4">
-                <label for="inputState" class="form-label text-white">Provincia</label>
-                <select id="inputState" class="form-select">
-                  <option selected>Seleccione...</option>
-                  <option>...</option>
-                </select>
-              </div>
-              <div class="col-md-2">
-                <label for="inputZip" class="form-label text-white">C.Postal</label>
-                <input type="text" class="form-control" id="inputZip">
-              </div>
-              <div class="col-md-6">
-                <label for="inputEmail4" class="form-label text-white">Email</label>
-                <input type="email" required class="form-control" id="inputEmail4" placeholder="xx@xxxx.com">
-              </div>
-              <div class="btn-secondary mt-5">
-                <button type="submit" class="btn ms-5">Enviar</button>
-                <button type="reset" class="btn ms-5">Cancelar</button>
-              </div>
-           </form>
+            <h6>Itinerario :</h6>
+            <ul>
+              <li> Downtown...</li>
+              <li> Torre de la Libertad</li>
+              <li> zona zero</li>
+              <li> Trinity Church</li> 
+              <li> Oculus</li>
+              <li> century 21 </li>
+              <li> Ferry</li>
+              <li> Soho... </li>
+              <li> Galerias </li>
+              <li> Estudios</li>
+              <li> Librerias</li>
+              <li> Casas decoracion y diseño.</li>
+              <li> CHelsea ...</li>
+              <li> alerias de arte </li>
+              <li> Chelsea market</li>
+              <li> Brooklyn...</li>
+              <li> Brooklyn Bridge</li>
+              <li> Dumbo</li>
+              <li> Brooklyn Historical Society Dumbo</li>
+              <li> West Elm</li>
+              <li> Little Island</li>
+            </ul>
+            <h6>Valor 3900 dólares cubriendo hospedaje y pasajes .... </h6>  
+            <h6>Para mayor informacion:</h6>
+            <ul>
+              <li>Fernanda - WhatsApp 1150625547 </li>
+            </ul>
           </article>
-          <article class="col-md-6 mt-5 " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <h3>Contactanos</h3>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Telefono
+          <article class="col-md-6 mt-3 " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+            <section class="container  bg-secondary p-3">
+              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="../images/salidas/img1.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img2.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img3.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img4.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img5.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img6.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img7.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img8.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img9.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img10.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/salidas/img11.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img12.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img13.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img14.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img15.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img16.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img17.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/salidas/img18.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/salidas/img19.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/sallidas/img20.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                   </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">(+54) 11-12345678 - <code> Whatsapp:</code>(+54) 911-12345678</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Direccion
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                   </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Pasaje Bellini 12345 - CABA <code></div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Correo Electronico
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">info@arte.com<code></code></div>
-                </div>
-              </div>
-            </div>
+                </div> 
+        </section>
           </article>
          <div>
         </div>
-      </section>-->
+      </section>
       <footer class="m-4">
         <span class="text-secondary bg-transparent  justify-content-left align-items-center p-2 m-1">Copywrite 2022 - </span>
         <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
         <a href="https://www.instagram.com/fer.rovarella.arte" target="_blank" ><img class="max-red" src="../images/iconos/itg.png"></a>
         <a href="#" target="_blank"><img class="max-red" src="../images/iconos/wp.png" alt="wp"></a>
-    </footer> 
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
