--- a/pages/adultos.html
+++ b/pages/adultos.html
@@ -12,7 +12,6 @@
 <body class="bc-body">
     <nav class="navbar navbar-expand-lg nav-bg-color navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" src="../images/logo1.png" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,83 +29,138 @@
           </div>
         </div>
       </nav>
-      <!-- <section class="container">
+      <section class="container">
+        <h4>Las aulas virtuales o presenciales con distanciamiento consisten en pintar juntos creando los diseños y desarrollos de las técnicas</h4>
         <div class="row">
-          <article class="col-md-6 mt-5" data-aos="flip-left"
+          <article class="col-md-6 mt-3" data-aos="flip-left"
             data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <h3>Completa tus datos</h3>
-            <form class="row g-3">
-              <div class="col-12">
-                <label for="inputAddress" class="form-label text-white">Nombre y Apellido</label>
-                <input type="text" required class="form-control" id="inputAddress" placeholder="Ingrese su nombre y apellido...">
-              </div>
-              <div class="col-12">
-                <label for="inputAddress2" class="form-label text-white">Direccion</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Ingrese su direccion...">
-              </div>
-              <div class="col-md-6">
-                <label for="inputCity" class="form-label text-white">Cuidad</label>
-                <input type="text" class="form-control" id="inputCity">
-              </div>
-              <div class="col-md-4">
-                <label for="inputState" class="form-label text-white">Provincia</label>
-                <select id="inputState" class="form-select">
-                  <option selected>Seleccione...</option>
-                  <option>...</option>
-                </select>
-              </div>
-              <div class="col-md-2">
-                <label for="inputZip" class="form-label text-white">C.Postal</label>
-                <input type="text" class="form-control" id="inputZip">
-              </div>
-              <div class="col-md-6">
-                <label for="inputEmail4" class="form-label text-white">Email</label>
-                <input type="email" required class="form-control" id="inputEmail4" placeholder="xx@xxxx.com">
-              </div>
-              <div class="btn-secondary mt-5">
-                <button type="submit" class="btn ms-5">Enviar</button>
-                <button type="reset" class="btn ms-5">Cancelar</button>
-              </div>
-           </form>
+            <h6>Los Horarios son :</h6>
+            <ul>
+              <li>Martes y Jueves de 10hs-12hs</li>
+              <li>Martes y Jueves de 17hs-19hs</li>
+              <li>Martes de 19hs-21hs</li>
+            </ul>
+            <h6>Son cuatro clases incluidas en el mes</h6>
+            <h6>Duracion de dos horas cada clase</h6> 
+            <h6>Los materiales no estan incluidos</h6>  
+            <h6>Para mayor informacion:</h6>
+            <ul>
+              <li>Fernanda - WhatsApp 1150625547 </li>
+              <li>Lugar ARCE 882 piso 1 y Maure las cañitas capital</li>
+            </ul>
           </article>
-          <article class="col-md-6 mt-5 " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-            <h3>Contactanos</h3>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    Telefono
+          <article class="col-md-6 mt-3 " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
+            <section class="container  bg-secondary p-3">
+              <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="../images/adultos/img1.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img2.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img3.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img4.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img5.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img6.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img7.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img8.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img9.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img10.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/adultos/img11.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img12.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img13.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img14.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img15.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img16.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img17.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/adultos/img18.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img19.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img20.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/adultos/img21.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img22.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img23.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img24.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img25.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img26.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img27.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/adultos/img28.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img29.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="../images/adultos/img30.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item"> 
+                      <img src="../images/adultos/img31.jpeg" class="d-block w-100" alt="...">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                   </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">(+54) 11-12345678 - <code> Whatsapp:</code>(+54) 911-12345678</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Direccion
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
                   </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Pasaje Bellini 12345 - CABA <code></div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    Correo Electronico
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">info@arte.com<code></code></div>
-                </div>
-              </div>
-            </div>
+                </div> 
+        </section>
           </article>
          <div>
         </div>
-      </section>-->
+      </section>
       <footer class="m-4">
         <span class="text-secondary bg-transparent  justify-content-left align-items-center p-2 m-1">Copywrite 2022 - </span>
         <a class="text-decoration-none text-secondary" href="mailto:info@arte.com">Contactame aqui</a>
