--- a/pages/marqueria.html
+++ b/pages/marqueria.html
@@ -12,7 +12,7 @@
 <body class="bc-body">
     <nav class="navbar navbar-expand-lg nav-bg-color navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img class="logo" src="../images/logo1.png" alt="logo"></a>
+          <!-- <a class="navbar-brand" href="#"><img class="logo" src="../images/logo1.png" alt="logo"></a> -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
